FIX : vérification notice vide sur vérification URL